# opencg

./: .gitignore  CMakeLists.txt  LICENSE  PROJECT_STATUS.md  QUICKSTART.md  README.md  benchmark_results_instances1-3.csv  benchmark_results_instances1-3.json  environment.yml  pyproject.toml
.github/workflows/: README.md  tests.yml
benchmarks/: cutting_stock.py  cutting_stock_benchmark.py  pricing_comparison.py  vrp_test.py  vrptw_test.py
docs/: ARCHITECTURE.md  README.md  building_networks.md  custom_application.md  custom_master.md  custom_pricing.md  custom_resources.md
examples/: README.md
examples/notebooks/: 01_cutting_stock.ipynb  02_vehicle_routing.ipynb  03_crew_pairing.ipynb  04_parallel_pricing.ipynb
examples/scripts/crew_pairing/: load_kasirzadeh.py  solve_kasirzadeh.py  solve_kasirzadeh_coverage.py
opencg/: __init__.py  config.py
opencg/_core/: __init__.py
opencg/applications/: __init__.py  cutting_stock.py
opencg/applications/crew_pairing/: __init__.py  resources.py
opencg/applications/crew_pairing/pricing/: __init__.py
opencg/applications/vrp/: __init__.py  instance.py  network_builder.py  resources.py  solver.py
opencg/core/: __init__.py  arc.py  column.py  network.py  node.py  problem.py  resource.py
opencg/master/: __init__.py  base.py  cplex.py  highs.py  solution.py
opencg/parsers/: __init__.py  base.py  kasirzadeh.py
opencg/pricing/: __init__.py  accelerated.py  base.py  cspy_pricing.py  diverse_multibase.py  fast_per_source.py  label.py  labeling.py  multibase.py  multibase_boost.py  multibase_cpp.py  optimized_multibase.py  per_source_boost.py  per_source_pricing.py  targeted_pricing.py
opencg/solver/: __init__.py  column_generation.py  solution.py
scripts/: benchmark_all_instances.py  diagnose_crew_pairing.py  profile_crew_pairing.py  test_all_applications.py  test_crew_pairing_solve.py  test_integral_lp.py
src/bindings/: boost_spprc_bindings.cpp  label_bindings.cpp  module.cpp  parallel_pricing_bindings.cpp  pricing_bindings.cpp
src/core/: label.hpp  network.hpp
src/pricing/: boost_spprc.hpp  labeling.hpp  parallel_labeling.hpp
tests/: conftest.py
tests/cpp/: test_label.cpp  test_pricing.cpp
tests/integration/: __init__.py  test_crew_pairing.py  test_csp.py  test_vrptw.py
tests/unit/: test_core.py  test_master.py  test_pricing.py  test_solver.py
